--- a/record_dns.yml
+++ b/record_dns.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Add DNS A record
       win_shell: |
-        Add-DnsServerResourceRecord -ZoneName "test.com" -A -Name "test" -IPv4Address "10.10.70.204"
+        Add-DnsServerResourceRecord -ZoneName "test.com" -A -Name "demo" -IPv4Address "10.10.70.202"
       become: yes
       become_user: administrator
 
